Include hole number in shot analysis